adding first 7 pages media

--- a/#src/index.html
+++ b/#src/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     @@include('_header.html')
-    <main class="main"></main>
+    <main class="main">
+        <embed src="img/Services/Advertising printing/Business cards.svg" type="">
+    </main>
 </body>
 </html>
