--- a/#src/index.html
+++ b/#src/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/script.js"></script>
     <title>Document</title>
 </head>
 <body>
     @@include('_header.html')
     <main class="main">
-        <embed src="img/Services/Advertising printing/Business cards.svg" type="">
     </main>
 </body>
 </html>
