--- a/#src/index.html
+++ b/#src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,12 @@
     <script defer src="js/script.js"></script>
     <title>Document</title>
 </head>
+
 <body>
     @@include('_header.html')
     <main class="main">
     </main>
+    @@include('_footer.html')
 </body>
+
 </html>
